--- a/style.css
+++ b/style.css
@@ -11,3 +11,4 @@ img {
 #button:hover {background-color: #ff0000; text-decoration: underline;}
 #background {border-radius:50px;
   width:50px;}
+#b {background-color: red;}
