--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ img {
   padding: 10px;
     position: relative;
 }
-#button {display: inline-block; position: absolute; bottom: 50px;  background-color: #ffffff; width: 80px; height: 30px; padding: 12px 0px 0px 12px; }
+#button {display: inline-block; position: absolute; bottom: 50px; left: 100px; background-color: #ffffff; width: 80px; height: 30px; padding: 12px 0px 0px 12px; }
 #button:hover {background-color: #ff0000; text-decoration: underline;}
 #background {border-radius:50px;
   width:50px;}
