--- a/style.css
+++ b/style.css
@@ -12,4 +12,4 @@ img {
 #button:hover {background-color: #ff0000; text-decoration: underline;}
 #background {border-radius:50px;
   width:50px;}
-#1 {height: 1000px; background-color: #eb556c; width: 600px;}
+#one {height: 1000px; background-color: #eb556c; width: 600px;}
