--- a/style.css
+++ b/style.css
@@ -6,10 +6,18 @@ img {
 #header {
   background: url("ha.jpg");
   padding: 10px;
-    position: absolute;
+    
 }
-#button {display: inline-block; position: absolute; bottom: 50px; right: 100px; background-color: #ffffff; width: 80px; height: 30px; padding: 12px 0px 0px 12px; }
-#button:hover {background-color: #ff0000; text-decoration: underline;}
+#button {display: inline-block; position: fixed; bottom: 50px; right: 100px; background-color: #ff0000; width: 80px; height: 30px; padding: 12px 0px 0px 12px; }
+#button a {color: black; text-decoration: none;}
+#button:hover {background-color: blue; text-decoration: underline;}
 #background {border-radius:50px;
   width:50px;}
-#one {height: 1000px; background-color: #eb556c; width: 600px;}
+.click:hover {height: 200px; }
+.click:{  height: 120px; display: inline-block; margin-top: 50px;}
+.clicko:hover{color: purple; text-decoration: underline;}
+.clicko {color: black; text-decoration: none;}
+
+
+
+#one {height: 950px; background-color: #eb556c; width: 300px; text-align: center; padding: 10px; 
