--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ img {
   padding: 10px;
     
 }
-#button {display: inline-block; position: fixed; bottom: 50px; right: 100px; background-color: #ff0000; width: 80px; height: 30px; padding: 12px 0px 0px 12px; }
+#button {display: inline-block; position: fixed; bottom: 50px; left: 10px; background-color: #ff0000; width: 80px; height: 30px; padding: 12px 0px 0px 12px; }
 #button a {color: black; text-decoration: none;}
 #button:hover {background-color: blue; text-decoration: underline;}
 #background {border-radius:50px;
@@ -17,7 +17,7 @@ img {
 .click:{  height: 120px; display: inline-block; margin-top: 50px;}
 .clicko:hover{color: purple; text-decoration: underline;}
 .clicko {color: black; text-decoration: none;}
-
+#two {background-color:#eb556c; display: inline-block; position: absolute; right: 10px; top: 210px; height: 500px; width: 800px;}
 
 
 #one {height: 950px; background-color: #eb556c; width: 300px; text-align: center; padding: 10px; 
