--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ img {
 .click:{  height: 120px; display: inline-block; margin-top: 50px; }
 .clicko:hover{color: purple; text-decoration: underline;}
 .clicko {color: black; text-decoration: none; text-align: center;}
-#two {background-color:#eb556c; display: inline-block; position: absolute; right: 10px; top: 210px; height: 500px; width: 800px;}
+#two {background-color:#eb556c; display: inline-block; position: absolute; right: 10px; top: 210px; height: 500px; width: 750px;}
 
 
-#one {height: 950px; background-color: #eb556c; width: 300px; text-align: center; padding: 10px; 
+#one {height: 950px; background-color: #eb556c; width: 300px; text-align: center; padding: 10px;}
+#three {height: 971px; width: 300px; display: inline-block; position: relative; left: 320px; bottom: 971px; background-color: #034545;}
