--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ img {
 .click:{  height: 120px; display: inline-block; margin-top: 50px; }
 .clicko:hover{color: purple; text-decoration: underline;}
 .clicko {color: black; text-decoration: none; text-align: center;}
-#two {background-color:#eb556c; display: inline-block; position: absolute; right: 10px; top: 210px; height: 500px; width: 750px;}
+#two {background-color:#eb556c; display: inline-block; position: absolute; right: 10px; top: 210px; height: 700px; width: 750px;}
 
-
+#four {background-color: #fd6b00;  display: inline-block; position: relative; left: 600px;}
 #one {height: 950px; background-color: #eb556c; width: 300px; text-align: center; padding: 10px;}
 #three {height: 971px; width: 300px; display: inline-block; position: absolute; left: 320px; top: 210px; background-color: #034545;}
