--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ img {
 #header {
   background: url("ha.jpg");
   padding: 10px; text-align: center;}
-#button {display: inline-block; position: fixed; bottom: 50px; left: 10px; background-color: #ff0000; width: 80px; height: 30px; padding: 12px 0px 0px 12px; }
-#button a {color: black; text-decoration: none;}
-#button:hover {background-color: blue; text-decoration: underline;}
+.button {display: inline-block; position: fixed; bottom: 50px; left: 10px; background-color: #ff0000; width: 80px; height: 30px; padding: 12px 0px 0px 12px; }
+.button a {color: black; text-decoration: none; text-align: center;}
+.button:hover {background-color: blue; text-decoration: underline;}
 #background {border-radius:50px;
   width:50px;}
 .click:hover {height: 200px; }
